fixing fetching photos

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DQA-AW-uPt">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Contact Table View Controller-->
+        <scene sceneID="ahD-Lc-TYM">
+            <objects>
+                <tableViewController id="ofy-F8-lvZ" customClass="ContactTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="zUY-aq-XDo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactCell" rowHeight="117" id="H4L-wY-k8E" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="117"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="H4L-wY-k8E" id="Fgo-OP-dSl">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="117"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eNO-VN-2lF">
+                                            <rect key="frame" x="16.000000000000007" y="11" width="118.66666666666669" height="95"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="eNO-VN-2lF" secondAttribute="height" multiplier="5:4" id="Jev-Tt-eur"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vfj-Qd-Q2h">
+                                            <rect key="frame" x="142" y="11" width="217" height="95"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="eNO-VN-2lF" firstAttribute="top" secondItem="Fgo-OP-dSl" secondAttribute="topMargin" id="1iA-Qg-mwz"/>
+                                        <constraint firstItem="eNO-VN-2lF" firstAttribute="leading" secondItem="Fgo-OP-dSl" secondAttribute="leadingMargin" id="aFh-Ik-VXb"/>
+                                        <constraint firstItem="eNO-VN-2lF" firstAttribute="bottom" secondItem="Fgo-OP-dSl" secondAttribute="bottomMargin" id="eZv-mh-WIL"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="contactImageView" destination="eNO-VN-2lF" id="fnE-jx-EXI"/>
+                                    <outlet property="contactLabel" destination="Vfj-Qd-Q2h" id="ClW-VK-AMI"/>
+                                    <segue destination="kEP-4A-LJR" kind="show" identifier="ContactDetailSegue" id="KVj-Rl-YYc"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ofy-F8-lvZ" id="brQ-9k-Qdn"/>
+                            <outlet property="delegate" destination="ofy-F8-lvZ" id="5ah-iM-jd6"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Amd-Qy-9Nb"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vLG-uF-Ryi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1042.4000000000001" y="-124.13793103448276"/>
+        </scene>
+        <!--Contact Detail View Controller-->
+        <scene sceneID="rZa-Nt-4zq">
+            <objects>
+                <viewController id="kEP-4A-LJR" customClass="ContactDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="a3W-Ky-jZ6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R2d-51-xYA">
+                                <rect key="frame" x="16" y="157" width="343" height="325"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="R2d-51-xYA" secondAttribute="height" multiplier="343:325" id="Nns-Jv-Q8r"/>
+                                    <constraint firstAttribute="width" secondItem="R2d-51-xYA" secondAttribute="height" multiplier="343:325" id="bIK-dt-exw"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Pe-98-OdR">
+                                <rect key="frame" x="16" y="517" width="343" height="23"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ix-cH-Dxf">
+                                <rect key="frame" x="16" y="559" width="343" height="23"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFS-Jw-BcM">
+                                <rect key="frame" x="16" y="602" width="343" height="23"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="yYx-bf-2At" firstAttribute="trailing" secondItem="R2d-51-xYA" secondAttribute="trailing" constant="16" id="Mu1-pL-chm"/>
+                            <constraint firstItem="R2d-51-xYA" firstAttribute="top" secondItem="yYx-bf-2At" secondAttribute="top" constant="69" id="P0m-Fd-K5Y"/>
+                            <constraint firstItem="8Pe-98-OdR" firstAttribute="top" secondItem="R2d-51-xYA" secondAttribute="bottom" constant="35" id="dsx-Tb-NGj"/>
+                            <constraint firstItem="RFS-Jw-BcM" firstAttribute="leading" secondItem="yYx-bf-2At" secondAttribute="leading" constant="16" id="lOv-rv-Sz4"/>
+                            <constraint firstItem="RFS-Jw-BcM" firstAttribute="top" secondItem="8ix-cH-Dxf" secondAttribute="bottom" constant="20" id="ldi-kP-UsN"/>
+                            <constraint firstItem="yYx-bf-2At" firstAttribute="bottom" secondItem="RFS-Jw-BcM" secondAttribute="bottom" constant="153" id="oGk-jB-TWw"/>
+                            <constraint firstItem="yYx-bf-2At" firstAttribute="trailing" secondItem="RFS-Jw-BcM" secondAttribute="trailing" constant="16" id="qRb-0m-Uj3"/>
+                            <constraint firstItem="R2d-51-xYA" firstAttribute="leading" secondItem="yYx-bf-2At" secondAttribute="leading" constant="16" id="sOh-qc-zZT"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yYx-bf-2At"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Atu-CW-b4v"/>
+                    <connections>
+                        <outlet property="contactEmailLabel" destination="RFS-Jw-BcM" id="oXf-Yq-o1N"/>
+                        <outlet property="contactImageView" destination="R2d-51-xYA" id="jUB-yh-Gz6"/>
+                        <outlet property="contactNameLabel" destination="8Pe-98-OdR" id="4ev-I4-lie"/>
+                        <outlet property="contactPhoneLabel" destination="8ix-cH-Dxf" id="63Q-PI-7Ur"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zso-zA-e9Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1912.8" y="-124.13793103448276"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Hj8-Ii-chS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DQA-AW-uPt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FAm-qN-J9C">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ofy-F8-lvZ" kind="relationship" relationship="rootViewController" id="F7y-N6-Llw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dku-VY-BeE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="100" y="-124.13793103448276"/>
+        </scene>
+    </scenes>
 </document>
