--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -26,25 +26,28 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fIu-N1-qvB">
-                                            <rect key="frame" x="0.0" y="0.0" width="290.33333333333331" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="290.33333333333331" height="51"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o8C-Z0-fGr">
-                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="50"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="51"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIq-Bm-ty0">
-                                                    <rect key="frame" x="248.00000000000003" y="0.0" width="42.333333333333343" height="50"/>
+                                                    <rect key="frame" x="248.00000000000003" y="0.0" width="42.333333333333343" height="51"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="rIq-Bm-ty0" firstAttribute="leading" secondItem="o8C-Z0-fGr" secondAttribute="trailing" constant="8" id="nVJ-5g-tFL"/>
+                                            </constraints>
                                         </stackView>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="imageThumbnail" destination="o8C-Z0-fGr" id="2l6-pu-czG"/>
                                     <outlet property="nameLabel" destination="rIq-Bm-ty0" id="JBd-aM-j2z"/>
-                                    <segue destination="S38-fG-F5E" kind="show" id="uXg-Bu-1lg"/>
+                                    <segue destination="S38-fG-F5E" kind="show" identifier="UserDetail" id="uXg-Bu-1lg"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -53,10 +56,10 @@
                             <outlet property="delegate" destination="XCo-qP-oWO" id="Hve-o9-gWU"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="USERS" id="Nq7-NQ-bow">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="EPf-Wm-4Vr">
+                    <navigationItem key="navigationItem" title="USERS" id="MM4-2Z-01j">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="UCx-u9-2Vb">
                             <connections>
-                                <action selector="AddTapped:" destination="XCo-qP-oWO" id="TTf-Vw-Pyq"/>
+                                <action selector="AddTapped:" destination="XCo-qP-oWO" id="UcU-q6-THj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -73,33 +76,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fYH-G7-do4">
-                                <rect key="frame" x="68" y="457" width="50" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Phone #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9B-4s-E3u">
-                                <rect key="frame" x="65" y="497" width="64" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HcD-Dd-txR">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="Cto-6k-rsy">
+                                <rect key="frame" x="20" y="479" width="335" height="99"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fYH-G7-do4">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9B-4s-E3u">
+                                        <rect key="frame" x="0.0" y="39.333333333333371" width="335" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="df5-uL-wcu">
+                                        <rect key="frame" x="0.0" y="78.666666666666629" width="335" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HcD-Dd-txR">
                                 <rect key="frame" x="42" y="144" width="291" height="248"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="df5-uL-wcu">
-                                <rect key="frame" x="68" y="538" width="41" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="HcD-Dd-txR" firstAttribute="top" secondItem="3ex-d1-akR" secondAttribute="top" constant="56" id="3ln-i6-VVy"/>
+                            <constraint firstItem="3ex-d1-akR" firstAttribute="trailing" secondItem="HcD-Dd-txR" secondAttribute="trailing" constant="42" id="6Iw-KG-Pst"/>
+                            <constraint firstItem="3ex-d1-akR" firstAttribute="bottom" secondItem="Cto-6k-rsy" secondAttribute="bottom" constant="200" id="Eoc-de-TT1"/>
+                            <constraint firstItem="Cto-6k-rsy" firstAttribute="leading" secondItem="3ex-d1-akR" secondAttribute="leading" constant="20" id="LeV-NY-n1A"/>
+                            <constraint firstItem="3ex-d1-akR" firstAttribute="trailing" secondItem="Cto-6k-rsy" secondAttribute="trailing" constant="20" id="Nbb-cN-pu7"/>
+                            <constraint firstItem="HcD-Dd-txR" firstAttribute="leading" secondItem="3ex-d1-akR" secondAttribute="leading" constant="42" id="PvR-fz-6V7"/>
+                            <constraint firstItem="Cto-6k-rsy" firstAttribute="top" secondItem="HcD-Dd-txR" secondAttribute="bottom" constant="87" id="rkU-wB-XW6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="3ex-d1-akR"/>
                     </view>
                     <navigationItem key="navigationItem" id="7e8-cd-ng5"/>
